--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+  "@prisma/client": "^4.6.1",
+  "bcrypt": "^5.1.0",
+  "cookie": "0.5.0",
+  "css-reset-and-normalize": "2.3.6",
+  "jose": "4.11.1",
+  "react-feather": "2.0.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
