--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+  "prisma": "4.6.1",
+  "ts-node": "10.9.1",
+  "tsconfig-paths": "4.1.1"
   }
 }
