--- a/components.json
+++ b/components.json
@@ -12,6 +12,7 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
-    "styles" : "@/styles"
+    "styles" : "@/styles",
+    "@/prisma/*": "./prisma/*"
   }
 }
