--- a/components.json
+++ b/components.json
@@ -13,6 +13,7 @@
     "components": "@/components",
     "utils": "@/lib/utils",
     "styles" : "@/styles",
-    "@/prisma/*": "./prisma/*"
+    "prisma": "@/prisma"
+    
   }
 }
