--- a/components.json
+++ b/components.json
@@ -13,7 +13,9 @@
     "components": "@/components",
     "utils": "@/lib/utils",
     "styles" : "@/styles",
-    "prisma": "@/prisma"
+    "prisma": "@/prisma",
+    "assets": "@/assets"
+
     
   }
 }
