--- a/package.json
+++ b/package.json
@@ -7,40 +7,40 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-    
   },
   "prisma": {
     "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
   },
   "dependencies": {
-  "@prisma/client": "^4.6.1",
-  "bcrypt": "^5.1.0",
-  "cookie": "0.5.0",
-  "css-reset-and-normalize": "2.3.6",
-  "jose": "4.11.1",
-  "react-feather": "2.0.10",
+    "@prisma/client": "^4.6.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cookie": "0.5.0",
+    "css-reset-and-normalize": "2.3.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "jose": "4.11.1",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "2.0.10",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-  "prisma": "4.6.1",
-  "ts-node": "10.9.1",
-  "tsconfig-paths": "4.1.1"
+    "@types/bcrypt": "^5.0.0",
+    "prisma": "4.6.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.1"
   }
 }
