--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "cookie": "0.5.0",
+    "cookie": "^0.5.0",
     "css-reset-and-normalize": "2.3.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "prisma": "4.6.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.1"
